// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search renders search form with default state 1`] = `
<div>
  <div
    class="sc-lnskGQ iMHAcJ"
  >
    <div
      class="sc-iKOlBD jgctmD"
    >
      <div
        class="sc-gjLKRm"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            class="sc-ifyqMW hsVASY"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div
        class="sc-eAKupd eFelt"
      >
        <label>
          Дата с
          <input
            name="dateFrom"
            type="date"
          />
        </label>
        <label>
          Дата по
          <input
            name="dateTo"
            type="date"
          />
        </label>
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with all params 1`] = `
<div>
  <div
    class="sc-lnskGQ iMHAcJ"
  >
    <div
      class="sc-iKOlBD jgctmD"
    >
      <div
        class="sc-gjLKRm"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            class="sc-ifyqMW hsVASY"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div
        class="sc-eAKupd eFelt"
      >
        <label>
          Дата с
          <input
            name="dateFrom"
            type="date"
          />
        </label>
        <label>
          Дата по
          <input
            name="dateTo"
            type="date"
          />
        </label>
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        >
          <span
            class="sc-hIPCAM kiIpFo"
          >
            foo
            <button
              aria-label="Удалить тег foo"
              class="sc-dmXXqF ejSuxt"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-hIPCAM kiIpFo"
          >
            bar
            <button
              aria-label="Удалить тег bar"
              class="sc-dmXXqF ejSuxt"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-hIPCAM kiIpFo"
          >
            baz
            <button
              aria-label="Удалить тег baz"
              class="sc-dmXXqF ejSuxt"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with date range params 1`] = `
<div>
  <div
    class="sc-lnskGQ iMHAcJ"
  >
    <div
      class="sc-iKOlBD jgctmD"
    >
      <div
        class="sc-gjLKRm"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            class="sc-ifyqMW hsVASY"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div
        class="sc-eAKupd eFelt"
      >
        <label>
          Дата с
          <input
            name="dateFrom"
            type="date"
          />
        </label>
        <label>
          Дата по
          <input
            name="dateTo"
            type="date"
          />
        </label>
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with order param 1`] = `
<div>
  <div
    class="sc-lnskGQ iMHAcJ"
  >
    <div
      class="sc-iKOlBD jgctmD"
    >
      <div
        class="sc-gjLKRm"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            class="sc-ifyqMW hsVASY"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div
        class="sc-eAKupd eFelt"
      >
        <label>
          Дата с
          <input
            name="dateFrom"
            type="date"
          />
        </label>
        <label>
          Дата по
          <input
            name="dateTo"
            type="date"
          />
        </label>
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with tags param 1`] = `
<div>
  <div
    class="sc-lnskGQ iMHAcJ"
  >
    <div
      class="sc-iKOlBD jgctmD"
    >
      <div
        class="sc-gjLKRm"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            class="sc-ifyqMW hsVASY"
            id="photo-sort-order"
            name="order"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
        </div>
      </div>
      <div
        class="sc-eAKupd eFelt"
      >
        <label>
          Дата с
          <input
            name="dateFrom"
            type="date"
          />
        </label>
        <label>
          Дата по
          <input
            name="dateTo"
            type="date"
          />
        </label>
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        />
      </div>
      <div
        class="sc-gjLKRm"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dJGLCP ejpPQV"
        >
          <span
            class="sc-hIPCAM kiIpFo"
          >
            landscape
            <button
              aria-label="Удалить тег landscape"
              class="sc-dmXXqF ejSuxt"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-hIPCAM kiIpFo"
          >
            portrait
            <button
              aria-label="Удалить тег portrait"
              class="sc-dmXXqF ejSuxt"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
